--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,13 @@
 environment:
   PATH: '%PATH%;C:\Program Files (x86)\Rust\bin;C:\MinGW\bin'
   matrix:
-    - TARGET: x86_64-pc-windows-msvc
-    - TARGET: i686-pc-windows-msvc
     - TARGET: i686-pc-windows-gnu
 install:
   - ps: Start-FileDownload "https://static.rust-lang.org/dist/rust-nightly-${env:TARGET}.exe"
   - rust-nightly-%TARGET%.exe /VERYSILENT /NORESTART /DIR="C:\Program Files (x86)\Rust"
   - rustc -V
   - cargo -V
+  - make -v
 build: false
 test_script:
   - cargo test --verbose
