--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,6 @@
 environment:
   PATH: '%PATH%;C:\Program Files (x86)\Rust\bin;C:\MinGW\bin'
+  MAKE: 'mingw32-make'
   matrix:
     - TARGET: i686-pc-windows-gnu
 install:
@@ -9,7 +10,7 @@ install:
   - rust-nightly-%TARGET%.exe /VERYSILENT /NORESTART /DIR="C:\Program Files (x86)\Rust"
   - rustc -V
   - cargo -V
-  - make -v
 build: false
 test_script:
-  - RUST_BACKTRACE=1 cargo test --verbose
+  - set RUST_BACKTRACE=1
+  - cargo test --verbose
