--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,7 @@
 environment:
   PATH: '%PATH%;C:\Program Files (x86)\Rust\bin;C:\MinGW\bin'
   MAKE: 'mingw32-make'
+  MSYSTEM: 'MINGW32'
   matrix:
     - TARGET: i686-pc-windows-gnu
 install:
