Enable ESSL support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,6 +91,7 @@ set(ANGLE_SOURCES
 
 add_definitions(
   -DANGLE_TRANSLATOR_STATIC
+  -DANGLE_ENABLE_ESSL
   -DANGLE_ENABLE_GLSL
   -DLIBGLESV2_EXPORT_H
   -DLIBANGLE_IMPLEMENTATION
