Autogenerate Angle bindings.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ addons:
 
 before_install:
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then export CXX=g++-4.8; fi
+  - . ./ci/before_install.sh
 
 os:
   - linux
