--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "angle"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["ecoal95 <ecoal95@gmail.com>"]
 description = "GLSL parsing and validation library based on ANGLE"
 license = "MIT"
@@ -9,3 +9,4 @@ build = "build.rs"
 
 [build-dependencies]
 cmake = "0.1"
+bindgen = "0.22.0"
